@@ -492,6 +492,13 @@ def test_generate():
                   ],
                  'class', 'Class', member_order='bysource', all_members=True)
 
+    # test autodoc_docstring_signature
+    assert_result_contains(
+        '.. py:method:: DocstringSig.meth(FOO, BAR=1) -> BAZ', 'method',
+        'test_autodoc.DocstringSig.meth')
+    assert_result_contains(
+        '   rest of docstring', 'method', 'test_autodoc.DocstringSig.meth')
+
 
 # --- generate fodder ------------
 
@@ -582,3 +589,12 @@ class Outer(object):
 
     # should be documented as an alias
     factory = dict
+
+
+class DocstringSig(object):
+    def meth(self):
+        """
+        meth(FOO, BAR=1) -> BAZ
+
+        rest of docstring
+        """
